5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1633_2924.log
== TEST (2019-04-02 19:01:50) 
-- CODE:
print("NAO SEI OQ EU TO FAZENDO AQUI")
-- OUTPUT:
NAO SEI OQ EU TO FAZENDO AQUI
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:02:32) 
-- CODE:
print("NAO SEI OQ EU TO FAZENDO AQUI")i
-- EXECUTION TIME:
0.208233
-- ERROR:
  File "/home/codebench/codes/1633/2924/main.py", line 1
    print("NAO SEI OQ EU TO FAZENDO AQUI")i
                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
